# ParameterEstimationGPR

./: .gitignore  AMC-Revision-Final.tex  AUDIT_SUMMARY.md  BEFORE_AFTER_COMPARISON.md  CALCULATION_METHOD_CHANGE.md  CODE_AUDIT_FIGURES.md  EstimationDerivativsfromNoisyData_flattened.tex  EstimationDerivativsfromNoisyData_text.txt  OVERLEAF_INTEGRATION_GUIDE.md  OVERLEAF_WORKFLOW.md  PAPER_EDITS_SUMMARY.md  PAPER_PLANNING_GUIDE.md  README.md  REFACTORING_COMPLETE.md  TABLES_FIGURES_DATAMAP.md  audit_all_tables.py  build_paper.py  compare_error_methods.py  juliacon_pres.tex  overleaf_git_setup.sh  overleaf_git_workflow.sh  prepare_for_overleaf.sh  pres2.tex  pyproject.toml  setup.sh  sync_from_overleaf.sh
archive/gemini-paper-sections/: main.tex
config/: plotting_params.yaml
dataset_package/: COMBINED_DATASET_REFERENCE.md  README.md  combined_results.csv  combined_results_filtered.csv  config.json  filter_nonidentifiable.py  generate_summary_statistics.py  systems.json
dataset_package/summary_statistics/: SUMMARY.md  overall_performance.csv  performance_by_noise.csv  performance_by_system.csv
docs/: TABLES_FIGURES_DATAMAP.md
gemini-paper/: paper.tex
gemini-paper/sections/: 01_introduction.tex  06_discussion.tex  07_conclusion.tex
gemini-paper/tables/: overall_performance.tex  system_performance_low_noise.tex
paper/: paper.tex  references.bib
paper/tables/: observables_table.tex  (+9 more)
scripts/: data_loading.py  generate_all_final_figures.py  generate_corrected_tables_1_2.py  generate_figure1_gpr_demo.py  generate_system_performance_tables.py  shared_metrics.py
(+6 files in other folders)
